fixed submit button layout shift in mobile

--- a/frontend/src/app/components/FilterBar/FilterBar.module.css
+++ b/frontend/src/app/components/FilterBar/FilterBar.module.css
@@ -30,6 +30,14 @@
   display: none;
 }
 
+.filterBar__titleContainer {
+  width: 100%;
+}
+
+.filterBar__titleContainer___shrink {
+  width: 60%;
+}
+
 .filterBar__contractSection {
   display: none;
 }
